--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ recommend:
 # Configure website favicon and LOGO
 # 配置网站favicon和网站LOGO
 favicon: /favicon-32x32-ZR.png
-logo: /medias/logo.png
+logo: /medias/laptop-code-solid.svg
 
 # The configuration of the second button in the home banner,
 # including the display name of the button, the font awesome icon, and the hyperlink to the button.
